typecheck/tests/micro/good/bi_expression_liter.c
//binary expression for literals
void main(void)
{
	1+1;
	1-1;
	1*1;
	1/1;
	1==1;
	1!=1;
	1<1;
	1>1;
	1<=1;
	1>=1;
return;
}
