typecheck/tests/micro/bad/argument_wrong_num1.c
void orange(int x) 
{return;}

void main(void)
{
	orange();
return;
}
